--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,1 +1,41 @@
-/* css styles */
+body {
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+}
+
+p {
+  margin: 0;
+  padding: 0;
+  line-height: 1.2;
+}
+
+h1,h2 {
+  font-size: 16pt;
+}
+h3,h4 {
+  font-size: 14pt;
+}
+
+
+.project-box {
+  background-color: #1f1f1f;
+  padding: 1.5rem;
+  border-radius: 12px;
+  box-shadow: 0 0 12px rgba(0,0,0,0.25);
+  transition: transform 0.2s ease;
+  height: 100%;
+}
+
+.project-box:hover {
+  transform: scale(1.03);
+  background-color: #2c2c2c;
+}
+
+.project-box h3 {
+  margin-top: 1rem;
+  font-size: 1.2rem;
+}
+
+.project-box p {
+  font-size: 1rem;
+}
